--- a/views/lqj/juesefujia.html
+++ b/views/lqj/juesefujia.html
@@ -5,6 +5,7 @@
 		<title></title>
 		<link rel="stylesheet" type="text/css" href="../../alert/sweetalert.css" />
 		<link rel="stylesheet" type="text/css" href="../../assets/css/layui.css" />
+		<link rel="stylesheet" href="../../css/bootstrap.min.css" />
 		<style type="text/css">
 			*{
 				margin: 0px;
@@ -19,8 +20,11 @@
 			<a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
 			<a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
 		</script>
+		<script src="../../js/home.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/jquery-3.5.1-min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../alert/sweetalert-dev.js" type="text/javascript" charset="utf-8"></script>
+		<script type="text/javascript" src="../../js/bootstrap.min.js" ></script>
+		<script type="text/javascript" src="../../js/dialog.js" ></script>
 		<script src="../../assets/layui.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			layui.use('table', function() {
@@ -35,7 +39,7 @@
 						{field:'jurisdictionname', title: '员工角色'},
 						{fixed: 'right', title:'操作', toolbar: '#barDemo', width:150}
 				    ]],
-					page: true
+					page: false
 				  });
 				  
 				  //监听工具条
@@ -51,10 +55,12 @@
 								dataType:"text",
 								success:function(data){
 									if(data === "1"){
-										layer.msg("刪除成功");
+										layer.close(index);
+										showAlertDialog("刪除成功!")
 										obj.del();
 									}else{
-										layer.msg("刪除失败");
+										layer.close(index);
+										showAlertDialog("删除失败！")
 									}
 								}
 							});
