--- a/views/lqj/juesefujia.html
+++ b/views/lqj/juesefujia.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta charset="utf-8">
 		<title></title>
@@ -7,70 +8,103 @@
 		<link rel="stylesheet" type="text/css" href="../../assets/css/layui.css" />
 		<link rel="stylesheet" href="../../css/bootstrap.min.css" />
 		<style type="text/css">
-			*{
+			* {
 				margin: 0px;
 				padding: 0px;
 			}
 		</style>
 	</head>
+
 	<body>
-		
+		<h1 style="text-align: center;">角色管理</h1>
+		<button type="button" id="tianjia" class="layui-btn">
+		  <i class="layui-icon">&#xe608;</i> 添加
+		</button>
 		<table class="layui-hide" lay-filter="demo" id="biaoge"></table>
 		<script type="text/html" id="barDemo">
-			<a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+			<!--<a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="detail">查看</a>-->
+			<button class="layui-btn layui-btn-xs" lay-event="edit">编辑</button>
 			<a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
 		</script>
 		<script src="../../js/home.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../js/jquery-3.5.1-min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/jquery-1.12.4.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../alert/sweetalert-dev.js" type="text/javascript" charset="utf-8"></script>
-		<script type="text/javascript" src="../../js/bootstrap.min.js" ></script>
-		<script type="text/javascript" src="../../js/dialog.js" ></script>
+		<script type="text/javascript" src="../../js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="../../js/dialog.js"></script>
 		<script src="../../assets/layui.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			layui.use('table', function() {
 				var table = layui.table;
-				
+
 				table.render({
-				    elem: '#biaoge',
-					url:'http://127.0.0.1:8080/dzw_sys/api/Jurisdictions',
-					cols: [[
-						{fixed: 'left',type:'numbers', title: '序号', sort: true,width:100},
-						{field:'jurisdictioncode', title: '员工编号'},
-						{field:'jurisdictionname', title: '员工角色'},
-						{fixed: 'right', title:'操作', toolbar: '#barDemo', width:150}
-				    ]],
+					elem: '#biaoge',
+					url: 'http://127.0.0.1:8080/dzw_sys/api/Jurisdictions',
+					cols: [
+						[
+							{ fixed: 'left', type: 'numbers', title: '序号', sort: true, width: 100 },
+							{ field: 'jurisdictioncode', title: '员工编号' },
+							{ field: 'jurisdictionname', title: '员工角色' },
+							{ fixed: 'right', title: '操作', toolbar: '#barDemo', width: 150 }
+						]
+					],
 					page: false
-				  });
-				  
-				  //监听工具条
-				table.on('tool(demo)', function(obj){
+				});
+
+				//监听工具条
+				table.on('tool(demo)', function(obj) {
 					var data = obj.data;
-					if(obj.event === 'detail'){
-						layer.msg('ID：'+ data.id + ' 的查看操作');
-					} else if(obj.event === 'del'){
-						layer.confirm('真的删除行么', function(index){
+					if(obj.event === 'detail') {
+						/*layer.msg('ID：' + data.id + ' 的查看操作');*/
+					} else if(obj.event === 'del') {
+						layer.confirm('真的删除行么', function(index) {
 							$.ajax({
-								url:"http://127.0.0.1:8080/dzw_sys/api/Jurisdictions/"+data["jurisdictioncode"],
-								typr:"get",
-								dataType:"text",
-								success:function(data){
-									if(data === "1"){
+								url: "http://127.0.0.1:8080/dzw_sys/api/Jurisdictions/" + data["jurisdictioncode"],
+								typr: "get",
+								dataType: "text",
+								success: function(data) {
+									if(data === "1") {
 										layer.close(index);
 										showAlertDialog("刪除成功!")
 										obj.del();
-									}else{
+									} else {
 										layer.close(index);
 										showAlertDialog("删除失败！")
 									}
 								}
 							});
-							
+
 						});
-					} else if(obj.event === 'edit'){
-						layer.alert('编辑行：<br>'+ JSON.stringify(data))
+					} else if(obj.event === 'edit') {
+						/*layer.alert('编辑行：<br>' + JSON.stringify(data))*/
+						layer.open({
+							type: 2,
+							title: '修改角色信息',
+							shadeClose: true,
+							shade: false,
+							maxmin: true, //开启最大化最小化按钮
+							area: ['420px', '260px'],
+							content: 'updatejuese.html?'+data["jurisdictioncode"],
+							success: function(layero, index) {
+								var body = layer.getChildFrame('body', index);
+							}
+						});
 					}
 				});
+
+				$("#tianjia").click(function() {
+					layer.open({
+						type: 2,
+						title: '添加角色信息',
+						shadeClose: true,
+						shade: false,
+						maxmin: true, //开启最大化最小化按钮
+						area: ['420px', '260px'],
+						content: 'addjuese.html'
+					});
+				});
+
 			});
 		</script>
 	</body>
+
 </html>
