改了汪杉杉文件夹

--- a/views/lqj/kehu.html
+++ b/views/lqj/kehu.html
@@ -61,7 +61,9 @@
 							{ fixed: 'right', title: '操作', toolbar: '#barDemo', width: 160 }
 						]
 					],
-					page: true
+					page: true,
+					limits: [1, 2, 3, 4],
+					limit: 3,
 				});
 
 				//监听工具条
