--- a/views/wss/addlevel.html
+++ b/views/wss/addlevel.html
@@ -5,9 +5,9 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<link rel="stylesheet" href="assets/css/layui.css">
-		<link rel="stylesheet" href="assets/css/admin.css">
-		<link rel="stylesheet" href="css/bootstrap.min.css" />
+		<link rel="stylesheet" href="../../assets/css/layui.css">
+		<link rel="stylesheet" href="../../assets/css/admin.css">
+		<link rel="stylesheet" href="../../css/bootstrap.min.css" />
 		<link rel="icon" href="/favicon.ico">
 		<title>技工星级-新增</title>
 	</head>
@@ -26,28 +26,29 @@
 			<div class="layui-form-item">
 				<label class="layui-form-label" style="width:100px">等级名称</label>
 				<div class="layui-input-block">
-					<input type="text" name="title" lay-verify="title" autocomplete="off" placeholder="请输入标题" class="layui-input">
+					<input type="text" name="title" lay-verify="title" autocomplete="off" placeholder="请输入等级名称" class="layui-input">
 				</div>
 			</div>
 			<div class="layui-form-item">
 				<label class="layui-form-label">工/时</label>
 				<div class="layui-input-block">
-					<input type="text" name="title" lay-verify="title" autocomplete="off" placeholder="请输入标题" class="layui-input">
+					<input type="text" name="title" lay-verify="title" autocomplete="off" placeholder="请输入工时" class="layui-input">
 				</div>
 			</div>
-			<div style="text-align: right; padding-right: 20px;">
-				<button type="button" class="layui-btn layui-btn-sm" lay-event="getCheckData" id="add">保存</button><button type="button" class="layui-btn layui-btn-sm" lay-event="getCheckData" id="add">关闭</button>
+			<div style="text-align: center;">
+				<button type="button" class="layui-btn layui-btn-sm" lay-event="getCheckData" id="add">保存</button>
+				<!--<button type="button" class="layui-btn layui-btn-sm" lay-event="getCheckData" id="add">关闭</button>-->
 			</div>
 		</form>
 	</body>
-	<script src="assets/layui.js"></script>
-	<script src="js/index.js"></script>
-	<script type="text/javascript" src="js/jquery-1.12.4.js"></script>
-	<script src="js/axios.min.js"></script>
-	<script src="js/axios_cfg.js"></script>
-	<script type="text/javascript" src="js/vue.js" ></script>
-	<script type="text/javascript" src="js/bootstrap.min.js" ></script>
-	<script type="text/javascript" src="js/dialog.js" ></script>
+	<script src="../../assets/layui.js"></script>
+	<script src="../../js/index.js"></script>
+	<script type="text/javascript" src="../../js/jquery-1.12.4.js"></script>
+	<script src="../../js/axios.min.js"></script>
+	<script src="../../js/axios_cfg.js"></script>
+	<script type="text/javascript" src="../../js/vue.js" ></script>
+	<script type="text/javascript" src="../../js/bootstrap.min.js" ></script>
+	<script type="text/javascript" src="../../js/dialog.js" ></script>
 	<script>
 		layui.use(["jquery"], function() {
 			var $ = layui.jquery;
