--- a/views/wss/updatelevel.html
+++ b/views/wss/updatelevel.html
@@ -5,8 +5,8 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<link rel="stylesheet" href="assets/css/layui.css">
-		<link rel="stylesheet" href="assets/css/admin.css">
+		<link rel="stylesheet" href="../../assets/css/layui.css">
+		<link rel="stylesheet" href="../../assets/css/admin.css">
 		<link rel="icon" href="/favicon.ico">
 		<title>技工星级-修改</title>
 		<style>
@@ -40,20 +40,20 @@
 							<input type="text" name="title" v-model="star.multiple" autocomplete="off" placeholder="请输入工/时" class="layui-input" id="input2">
 						</div>
 					</div>
-					<div style="text-align: right; padding-right: 20px;">
+					<div style="text-align: center;">
 						<button type="button" class="layui-btn layui-btn-sm" lay-event="getCheckData" @click='update1()'>修改</button>
-						<button type="button" class="layui-btn layui-btn-sm" lay-event="getCheckData" id="add">关闭</button>
+						<!--<button type="button" class="layui-btn layui-btn-sm" lay-event="getCheckData" id="add">关闭</button>-->
 					</div>
 				</form>
 			</div>
 		</body>
-		<script src="assets/layui.js"></script>
-		<script src="js/index.js"></script>
-		<script type="text/javascript" src="js/jquery-1.12.4.js"></script>
-		<script src="js/axios.min.js"></script>
-		<script src="js/axios_cfg.js"></script>
-		<script src="js/vue.js"></script>
-		<script src="assets/lay/modules/layer.js"></script>
+		<script src="../../assets/layui.js"></script>
+		<script src="../../js/index.js"></script>
+		<script type="text/javascript" src="../../js/jquery-1.12.4.js"></script>
+		<script src="../../js/axios.min.js"></script>
+		<script src="../../js/axios_cfg.js"></script>
+		<script src="../../js/vue.js"></script>
+		<script src="../../assets/lay/modules/layer.js"></script>
 		<script>
 			layui.use(["jquery"], function() {
 				var $ = layui.jquery;
