--- a/views/lqj/updatekehu.html
+++ b/views/lqj/updatekehu.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title>修改角色信息</title>
+		<title>修改客户信息</title>
 		<link rel="stylesheet" type="text/css" href="../../assets/css/layui.css" />
 	</head>
 
@@ -62,12 +62,12 @@
 			</div>
 			<div class="layui-form-item">
 				<div class="layui-input-block">
-					<button type="button" id="btn" class="layui-btn" style="margin-left: 190px;">修改</button>
+					<button type="button" id="btn" class="layui-btn" style="margin-left: 280px;">修改</button>
 				</div>
 			</div>
 		</form>
 	</body>
-	<script type="text/javascript" src="../../home.js" ></script>
+	<!--<script type="text/javascript" src="../../home.js" ></script>-->
 	<script src="../../js/jquery-1.12.4.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../../assets/layui.js" type="text/javascript" charset="utf-8"></script>
 	<script>
